--- a/web/experiment_9And10/experiment9/upload/HTMLFile/index.html
+++ b/web/experiment_9And10/experiment9/upload/HTMLFile/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>上传文件</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-
+<h1>文件上传实例 - By 刘鹏</h1>
+<form method="post" action="/TomcatTest/UploadServlet" enctype="multipart/form-data">
+    选择一个文件:
+    <input type="file" name="uploadFile" />
+    <br/><br/>
+    <input type="submit" value="上传" />
+</form>
 </body>
 </html>
