实验七.Servlet构建 V 9.0.0

--- a/web/experiment_7And8/experiment7/HTMLFile/index.html
+++ b/web/experiment_7And8/experiment7/HTMLFile/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>监听器</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
+<h1>
+    登陆
+</h1>
+<hr>
+<form action="" method="post">
+    <table>
+        <tr>
+            <th>
+                <p>
+                    用户名
+                </p>
+            </th>
+            <td>
+                <input type="text" name="liupengUserID">
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <p>
+                    密码
+                </p>
+            </th>
+            <td>
+                <input type="password" name="liupengPassword">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <input type="submit" value="提交">
+            </td>
+            <td>
+                <input type="reset" value="重置">
+            </td>
+        </tr>
+    </table>
+</form>
 
 </body>
 </html>
