实验十二.显示毒鸡汤 V 12.0.1

--- a/web/experiment_11And12/experiment12/HTMLFile/index.html
+++ b/web/experiment_11And12/experiment12/HTMLFile/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AJAX获取数据</title>
+    <link type="text/css" href="../CSSFile/index.css" rel="stylesheet">
 </head>
 <body>
-
+<h1>
+    显示一个小故事
+</h1>
+<hr>
+<form id="form1" name="form1" method="post" action="">
+    <input type="button" name="button" id="button" value="点击" onclick="loadStory()"/>
+</form>
+<table>
+    <tr>
+        <td id="output">
+        </td>
+    </tr>
+</table>
+<script type="text/javascript" rel="script" src="../JavaScriptFile/index.js"></script>
 </body>
 </html>
